# TIC-80

./: CMakeLists.txt  flake.nix
cmake/: core.cmake  sdl.cmake  shared.cmake  studio.cmake
nix/: argparse.nix  blip-buf.nix  msf-gif.nix  pocketpy.nix  zip.nix
src/api/: mruby.c
src/studio/screens/: console.c
src/system/sdl/: main.c
